--- a/MonoNX/MonoNX.csproj
+++ b/MonoNX/MonoNX.csproj
@@ -61,6 +61,7 @@
     <EnableProguard>true</EnableProguard>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OpenTK-1.0" />
     <Reference Include="System" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
